# maya-usd

./: .adsk-hooks  .clang-format  .clang-format-ignore  .clang-format-include  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  BranchHistory.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile-preflight-launcher  LICENSE.md  LICENSE.txt  Maya-USD.module.template  NOTICE.txt  PULL_REQUEST_TEMPLATE.md  README.md  README_DOC.md  SECURITY.md  azure-pipelines.yml  build.bat  build.py  build.sh  build_docker_centos6.sh  cxx17_legacy_support.h  full.bat  maya.cmd  mayaUSD.mod.template  mayaUSD_Win.mod.template  merge_al.bash  merge_pixar.bash  package.py  pxr_python.h  replace_lic.py
Core/: CMakeLists.txt  MayaUsd.cmake
Core/include/: CMakeLists.txt  MayaUsdApi.h
Core/src/: CMakeLists.txt  core.cpp
core/: CMakeLists.txt  CMakeLists_MayaUsd.txt.in  MayaUsd.cmake
core/base/: api.h  debugCodes.h
core/fileio/: fallbackPrimReader.cpp  functorPrimReader.cpp  functorPrimReader.h  functorPrimWriter.cpp  instancedNodeWriter.cpp  instancedNodeWriter.h  notice.h  primReader.cpp  primReader.h  primReaderArgs.cpp  primReaderContext.cpp  primReaderRegistry.h  primWriter.cpp  primWriter.h  registryHelper.cpp  shaderWriter.cpp  stageCache.cpp  stageCache.h  stageData.cpp  stageData.h  stageNode.cpp  transformWriter.cpp  writeJobContext.cpp
core/include/: MayaUsd.h.src
core/listeners/: notice.cpp  stageNoticeListener.cpp  stageNoticeListener.h
core/nodes/: pointBasedDeformerNode.cpp  pointBasedDeformerNode.h  proxyShapeBase.cpp  proxyShapeBase.h  referenceAssembly.h
core/schemas/: CMakeLists.txt  MayaReference.cpp  MayaReference.h  ModuleDeps.cpp  api.h  plugInfo.json.in  schema.usda.in  tokens.cpp  tokens.h
core/src/: CMakeLists.txt  core.cpp
core/utils/: blockSceneModificationContext.h  query.cpp  util.cpp
docs/: AutodeskFormCorpContribAgmtForOpenSource.docx  AutodeskFormIndContribAgmtForOpenSource.docx  CMakeLists.txt  CONTRIBUTING.md  DEVELOPER.md  Doxyfile.in  animation.md  assetresolution.md  basicUsage.md  build.md  contributing.md  developer.md  faq.md  geometry.md  importExport.md  layers.md  lock.md  proxyShape.md  pxrcomparison.md  python.md  selection.md  testing.md
include/: CMakeLists.txt  filesystem.hpp  fs_std.hpp
lib/: CMakeLists.txt  CMakeLists_MayaUsd.txt.in  MayaUsd.cmake  README.md
lib/AL_USDMaya/: CMakeLists.txt  Doxyfile  __init__.py  plugInfo.json  usdTranslator.cpp
lib/adskHydraSceneBrowser/: CMakeLists.txt  api.h
lib/base/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  mayaUsd.h.src
lib/fileio/: CMakeLists.txt  fallbackPrimReader.h  functorPrimReader.cpp  functorPrimReader.h  functorPrimWriter.cpp  functorPrimWriter.h  importData.cpp  importData.h  instancedNodeWriter.cpp  instancedNodeWriter.h  primReader.cpp  primReader.h  primReaderArgs.cpp  primReaderArgs.h  primReaderContext.h  primReaderRegistry.cpp  primUpdater.cpp  primUpdater.h  primUpdaterContext.cpp  primUpdaterContext.h  primUpdaterRegistry.cpp  primUpdaterRegistry.h  primWriter.h  primWriterArgs.cpp  primWriterArgs.h  primWriterContext.cpp  primWriterContext.h  primWriterRegistry.cpp  primWriterRegistry.h  registryHelper.cpp  registryHelper.h  shaderWriter.cpp  shaderWriter.h  transformWriter.cpp  transformWriter.h  writeJobContext.cpp  writeJobContext.h
lib/include/: CMakeLists.txt  api.h
lib/listeners/: CMakeLists.txt  notice.cpp  notice.h  proxyShapeNotice.cpp  proxyShapeNotice.h  stageNoticeListener.cpp  stageNoticeListener.h
lib/lookdevXUsd/: .clang-format  CMakeLists.txt  Export.h  LookdevXUsd.cpp  LookdevXUsd.h  ProxyShapeLookdevHandler.cpp  ProxyShapeLookdevHandler.h  UsdCapabilityHandler.cpp  UsdCapabilityHandler.h  UsdClipboardHandler.cpp  UsdClipboardHandler.h  UsdComponentConnections.cpp  UsdComponentConnections.h  UsdConnectionCommands.cpp  UsdConnectionCommands.h  UsdDebugHandler.cpp  UsdDebugHandler.h  UsdDeleteCommand.cpp  UsdDeleteCommand.h  UsdExtendedAttributeHandler.cpp  UsdExtendedAttributeHandler.h  UsdExtendedConnectionHandler.cpp  UsdExtendedConnectionHandler.h  UsdFileHandler.cpp  UsdFileHandler.h  UsdHierarchy.cpp  UsdHierarchy.h  UsdHierarchyHandler.cpp  UsdHierarchyHandler.h  UsdLookdevHandler.cpp  UsdLookdevHandler.h  UsdMaterial.cpp  UsdMaterial.h  UsdMaterialCommands.cpp  UsdMaterialCommands.h  UsdMaterialHandler.cpp  UsdMaterialHandler.h  UsdMaterialValidator.cpp  UsdMaterialValidator.h  UsdMxVersionUpgrade.cpp  (+17 more)
lib/mayaHydra/: CMakeLists.txt  (+1 more)
modules/: CMakeLists.txt  alUSD.mod.template  alUSD_Win.mod.template  mayaHydra.mod.template  mayaHydra_Win.mod.template  mayaUSD.mod.template  mayaUSD_Win.mod.template  mtoh.mod.template  pxrUSD.mod.template  pxrUSD_Win.mod.template
plugin/: CMakeLists.txt  adapter.cpp  adapter.h  adapterRegistry.cpp  adapterRegistry.h  areaLightAdapter.cpp  cmd.cpp  cmd.h  dagAdapter.cpp  dagAdapter.h  delegate.cpp  delegate.h  delegateBase.cpp  delegateBase.h  delegateCtx.cpp  delegateCtx.h  lightAdapter.cpp  lightAdapter.h  mayaSceneDelegate.cpp  mayaSceneDelegate.h  meshAdapter.cpp  meshAdapter.h  params.h  plugin.cpp  pointLightAdapter.cpp  pointLightAdapter.h  renderOverride.cpp  renderOverride.h  spotLightAdapter.cpp  utils.h  viewportRenderer.cpp  viewportRenderer.h
src/: CMakeLists.txt  alProxyAdapter.cpp  alProxyAdapter.h  alProxyDelegate.cpp  alProxyDelegate.h  alProxyUsdImagingDelegate.cpp  alProxyUsdImagingDelegate.h  debugCodes.cpp  debugCodes.h  plugInfo.json  renderOverride.cpp  utils.h
tests/: CMakeLists.txt  hdmaya_test_utils.py  mtoh_command_test.py  run_maya_test.py  run_maya_test_melwrapper_template.mel  run_maya_test_pywrapper_template.py  run_mayaplugin_tests.sh.in  test_dag_changes.py  test_mtoh_command.py  test_reparent.py  test_visibility.py
translators/: CMakeLists.txt  Camera.cpp  Camera.h  CommonTranslatorOptions.cpp  CommonTranslatorOptions.h  DirectionalLight.cpp  DirectionalLight.h  FrameRange.cpp  FrameRange.h  MayaReference.cpp  MayaReference.h  Mesh.cpp  Mesh.h  NurbsCurve.cpp  NurbsCurve.h  README.md  plugInfo.json.in
(+5176 files in other folders)
